show unique average score based on parameters
